Fix overlap of download bill element

--- a/src/app/shared/components/view-bill/view-bill.component.scss
+++ b/src/app/shared/components/view-bill/view-bill.component.scss
@@ -25,6 +25,12 @@
   }
 
 }
+  .btn-round {
+    height: 250px;
+    border-radius: 100%;
+    width: 250px;
+    margin: 0 auto;
+  }
 
 .details, .view-bill-container h4 {
   color:#000000;
